--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
     "zustand": "^4.5.2"
   },
